# git-archaeologist

./: .env.example  .gitignore  AGENTS.md  PLAN.md  README.md  pyproject.toml
.codex/rules/: repository.md
.docs/: README.md  download-trained-adapter.md  fine-tuning-types.md  fine-tuning.md  jaicon-ft-test-01.md  linux-sft-runbook.md  usage.md
.memory/fine-tuning/: README.md
configs/collect/: react_react.yaml
configs/data/: dpo.yaml  poc.yaml  raft.yaml  react_react_sft.yaml  sft.yaml
configs/model/: base.yaml  fallback_shared.yaml  h100_80gb.yaml  qwen3_8b_lowvram.yaml  top.yaml
configs/run/: react_react_h100_overnight.yaml  react_react_qwen3_14b.yaml  react_react_qwen3_8b_lowvram.yaml
configs/train/: dpo.yaml  dpo_h100_overnight.yaml  lora.yaml  lora_h100_overnight.yaml  lora_lowvram.yaml  sft.yaml  sft_h100_overnight.yaml  sft_lowvram.yaml
data/samples/: dpo_sample.jsonl  raft_sample.jsonl  react_react_poc.jsonl  sft_sample.jsonl
evals/expected/: smoke.md
evals/prompts/: smoke.jsonl
scripts/: collect_react_github.ps1  eval_model.ps1  materialize_roadmap_data.ps1  prepare_data.ps1  run_sft_linux.sh  train_dpo.ps1  train_sft.ps1  validate_data.ps1
src/llm_tuning_lab/: __init__.py  config.py
tests/: test_accounting.py  test_data_format.py  test_dpo_runtime.py  test_eval_predict.py  test_evidence_bundles.py  test_github_api.py  test_github_collector.py  test_github_records.py  test_github_sft_prepare.py  test_gold_cases.py  test_metrics.py  test_roadmap_data.py  test_run_eval.py  test_serious_presets.py  test_sft_pipeline.py  test_sft_runtime.py
(+47 files in other folders)
