[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-tuning-lab"
version = "0.1.0"
description = "A reproducible workspace for LLM fine-tuning experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "certifi>=2026.6.17",
  "pyyaml>=6.0.1",
]

[project.optional-dependencies]
train = [
  "accelerate>=0.34.0",
  "bitsandbytes>=0.43.0",
  "datasets>=2.20.0",
  "peft>=0.12.0",
  "torch>=2.3.0",
  "transformers>=4.44.0",
  "trl>=1.8.0,<2.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
